--- a/maze.css
+++ b/maze.css
@@ -1,4 +1,4 @@
-/*
+/* 620077636
 original lab idea and code by Kevin Wallace and Jeff Prouty; revised by Brian Le, Victoria Kirst, and Marty Stepp
 http://www.webstepbook.com/
 You don't need to download or edit this file.
